org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/CallFeature/CallFeature_deprecated/004_CallFeature_deprecated.kmt
/* $Id:$ 
 * Creation : December 29, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */

using kermeta::standard
using kermeta::io::StdIO => stdio

package test {
	class Main
	{
		
		operation main() : Void	is do
           // "toto".replace("o","u")
           var test : A init A.new
           test.a
   		end
	
		
	}

   
   class A {
   
   		@deprecated "true"
   		attribute a : String
   }
	

}

